fix: make name column sticky on horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,88 +2,85 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 @font-face {
-    font-family: helvetica;
-    src: url(../src/font/Helvetica.ttf);
+  font-family: helvetica;
+  src: url(../src/font/Helvetica.ttf);
 }
 
-:root, [data-theme]{
-    font-family: Helvetica;
-    font-size: 14px;
-    background-image: url(../src/images/TrustSwap_auto_x2.jpg)!important;
-    /* background-size: cover;
+:root,
+[data-theme] {
+  font-family: Helvetica;
+  font-size: 14px;
+  background-image: url(../src/images/TrustSwap_auto_x2.jpg) !important;
+  /* background-size: cover;
     background-repeat: no-repeat; */
 }
 
-.b-c{
-    border-bottom: 1px solid #041E4E;
+.b-c {
+  border-bottom: 1px solid #041e4e;
 }
 
-
-.Antelope{
-    font-weight: 700!important;
-    font-size: 39px!important;
-    color: white!important;
-    padding-top: 2rem;
+.Antelope {
+  font-weight: 700 !important;
+  font-size: 39px !important;
+  color: white !important;
+  padding-top: 2rem;
 }
 
-.dropdown{
-    background: #212429;
+.dropdown {
+  background: #212429;
 }
 
 .navbar-btn {
-    @apply btn btn-sm bg-[#41444f] border-none text-white inline-flex items-center justify-center text-[16px];
-    @apply h-auto py-2 px-4 gap-2.5;
-    @apply hover:bg-[#41444f]
+  @apply btn btn-sm bg-[#41444f] border-none text-white inline-flex items-center justify-center text-[16px];
+  @apply h-auto py-2 px-4 gap-2.5;
+  @apply hover:bg-[#41444f];
 }
 
 .navbar-btn--outline {
-    @apply btn btn-sm btn-outline text-white inline-flex items-center justify-center text-[16px] font-medium;
-    @apply bg-[#1F2E48] text-[#6888D2] border-[#6888D2];
-    @apply hover:bg-[#6888D2] hover:text-white hover:border-[#6888D2];
-    @apply h-auto py-2 px-4 gap-2.5;
+  @apply btn btn-sm btn-outline text-white inline-flex items-center justify-center text-[16px] font-medium;
+  @apply bg-[#1F2E48] text-[#6888D2] border-[#6888D2];
+  @apply hover:bg-[#6888D2] hover:text-white hover:border-[#6888D2];
+  @apply h-auto py-2 px-4 gap-2.5;
 }
 
 .navbar-btn__icon-farm {
-    @apply w-5 mb-0.5
+  @apply w-5 mb-0.5;
 }
 
 .navbar-btn__icon {
-    @apply h-5 w-5
+  @apply h-5 w-5;
 }
 
-.t{
-    color: white!important;
-    font-weight: 700!important;
-    font-size: 16px!important;
-    border: none!important;
-    background: #41444F!important;
-    padding-right: 0.75rem!important;
-    padding-left: 0.75rem!important;
-    padding-bottom: 1.75rem!important;
-    padding-top: 0.751rem!important;
+.t {
+  color: white !important;
+  font-weight: 700 !important;
+  font-size: 16px !important;
+  border: none !important;
+  background: #41444f !important;
+  padding-right: 0.75rem !important;
+  padding-left: 0.75rem !important;
+  padding-bottom: 1.75rem !important;
+  padding-top: 0.751rem !important;
 }
-.g{
-    color: #6888D2!important;
-    padding-top: 16px;
-    padding-bottom: 23px;
-    /* min-height: 3rem!important; */
-}
-
-.dd{
-    font-weight: 700!important;
-    font-size: 19px!important;
-    color: white!important;
+.g {
+  color: #6888d2 !important;
+  padding-top: 16px;
+  padding-bottom: 23px;
+  /* min-height: 3rem!important; */
 }
 
+.dd {
+  font-weight: 700 !important;
+  font-size: 19px !important;
+  color: white !important;
+}
 
 .table :where(thead, tfoot) :where(th, td) {
-    background-color: rgb(25, 52, 112)!important;
-    font-weight: 700!important;
-    font-size: 14px!important;
-    color: white!important;
+  background-color: rgb(25, 52, 112) !important;
+  font-weight: 700 !important;
+  font-size: 14px !important;
+  color: white !important;
 }
 
 /* .table :where(tbody th, tbody td) {
@@ -94,97 +91,88 @@
     background-color:red!important;
 } */
 
-
-.cn{
-    color: #7FA8F0;
-    font-weight: 700!important;
-font-size: 7px!important;
+.cn {
+  color: #7fa8f0;
+  font-weight: 700 !important;
+  font-size: 7px !important;
 }
 
-.cr{
-    font-weight: 800!important;
-font-size: 16px!important;
-background-image:url(../src/images/bg.png);
-border-radius: 5px;
+.cr {
+  font-weight: 800 !important;
+  font-size: 16px !important;
+  background-image: url(../src/images/bg.png);
+  border-radius: 5px;
 }
 
-.cg{
-    font-weight: 800!important;
-    font-size: 16px!important;
-    background-image:url(../src/images/bgg.png);
-    border-radius: 5px;
+.cg {
+  font-weight: 800 !important;
+  font-size: 16px !important;
+  background-image: url(../src/images/bgg.png);
+  border-radius: 5px;
 }
 
-.bgg{
-    font-weight: 800!important;
-    font-size: 16px!important;
-    color:#7FA8F0!important;
-    background-image:url(../src/images/bgb.png);
-    border-radius: 5px;
+.bgg {
+  font-weight: 800 !important;
+  font-size: 16px !important;
+  color: #7fa8f0 !important;
+  background-image: url(../src/images/bgb.png);
+  border-radius: 5px;
 }
 
-
-.footer{
-    background-color: black;
-    padding: 3.4rem;
-    /* margin-top: 2rem; */
+.footer {
+  background-color: black;
+  padding: 3.4rem;
+  /* margin-top: 2rem; */
 }
 
-@media (max-width : 600px)
-{
-    .Antelope{
+@media (max-width: 600px) {
+  .Antelope {
     margin-top: 3rem;
-    }
-
-    .table th:first-child{
-        display: none;
-    }
-
-}
-
-
-.logo-image{
-    @apply w-[100px]
-}
-
-.chnger{
-    background: #41444F!important;
-    padding: 5px!important;
-    border-radius: 4px!important;
-    color: white!important;
-}
-
-.ddm{
-    padding-left: 1rem!important;
-    padding-right: 2.2rem!important;
-    margin-left: -1.4rem!important;
-}
-
-.menu :where(li) > :where(*:not(ul)){
-    padding-left: 0rem!important;
-    padding-right: 0rem!important;
-    padding-top: 6px!important;
-    padding-bottom: 6px!important;
-}
-
-.farmImg{
-    width: 70%!important;
-}
-
-.brd{
-    border-radius: 9px;
-}
-
-tr:hover {
-    background-color: yellow!important;
   }
 
-.ddm li a{
-    font-weight: 700!important;
-    font-size: 19px!important;
-    color: white!important;
+  .table th:first-child {
+    display: none;
+  }
+}
+
+.logo-image {
+  @apply w-[100px];
+}
+
+.chnger {
+  background: #41444f !important;
+  padding: 5px !important;
+  border-radius: 4px !important;
+  color: white !important;
+}
+
+.ddm {
+  padding-left: 1rem !important;
+  padding-right: 2.2rem !important;
+  margin-left: -1.4rem !important;
+}
+
+.menu :where(li) > :where(*:not(ul)) {
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
+  padding-top: 6px !important;
+  padding-bottom: 6px !important;
+}
+
+.farmImg {
+  width: 70% !important;
+}
+
+.brd {
+  border-radius: 9px;
+}
+
+.ddm li a {
+  font-weight: 700 !important;
+  font-size: 19px !important;
+  color: white !important;
 }
 
 .label {
-    @apply w-20 px-2 bg-green-100 text-green-800;
+  @apply w-20 px-2 bg-green-100 text-green-800;
 }
